bug 965348 - control SocketTransportService::Poll tick during spdy idle r=hurley