netwerk/protocol/http/SpdySession3.cpp
@@ -207,7 +207,7 @@ SpdySession3::IdleTime()
   return PR_IntervalNow() - mLastDataReadEpoch;
 }
 
-void
+uint32_t
 SpdySession3::ReadTimeoutTick(PRIntervalTime now)
 {
     MOZ_ASSERT(PR_GetCurrentThread() == gSocketThread);
@@ -217,13 +217,15 @@ SpdySession3::ReadTimeoutTick(PRIntervalTime now)
          this, PR_IntervalToSeconds(now - mLastReadEpoch)));
 
     if (!mPingThreshold)
-      return;
+      return UINT32_MAX;
 
     if ((now - mLastReadEpoch) < mPingThreshold) {
       // recent activity means ping is not an issue
       if (mPingSentEpoch)
         mPingSentEpoch = 0;
-      return;
+
+      return PR_IntervalToSeconds(mPingThreshold) -
+        PR_IntervalToSeconds(now - mLastReadEpoch);
     }
 
     if (mPingSentEpoch) {
@@ -233,8 +235,9 @@ SpdySession3::ReadTimeoutTick(PRIntervalTime now)
              this));
         mPingSentEpoch = 0;
         Close(NS_ERROR_NET_TIMEOUT);
+        return UINT32_MAX;
       }
-      return;
+      return 1; // run the tick aggressively while ping is outstanding
     }
 
     LOG(("SpdySession3::ReadTimeoutTick %p generating ping 0x%X\n",
@@ -243,7 +246,7 @@ SpdySession3::ReadTimeoutTick(PRIntervalTime now)
     if (mNextPingID == 0xffffffff) {
       LOG(("SpdySession3::ReadTimeoutTick %p cannot form ping - ids exhausted\n",
            this));
-      return;
+      return UINT32_MAX;
     }
 
     mPingSentEpoch = PR_IntervalNow();
@@ -287,6 +290,7 @@ SpdySession3::ReadTimeoutTick(PRIntervalTime now)
            "ping ids exhausted marking goaway\n", this));
       mShouldGoAway = true;
     }
+    return 1; // run the tick aggressively while ping is outstanding
 }
 
 uint32_t
